# TestProject

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_fixture_test.py  test_e2e_composition.py  test_e2e_simple.py  test_ingestion.py
.claude/: launch.json
.github/workflows/: ci.yml  test.yml
alembic/: env.py
alembic/versions/: 20260709_024600_add_hybrid_taxonomy_system.py  20260709_162900_add_arc_instances_and_links.py  20260709_170000_add_scope_id_to_episodes.py  20260709_173000_add_cycle_membership_and_episode_link_orms.py  20260709_180000_add_scope_id_to_cycles.py  20260709_181500_add_mechanism_tags_to_episodes.py  20260710_113000_thesis_dominant_continuation_json.py  20260710_120000_add_thesis_confidence_fields.py  20260710_123000_add_embedding_epochs.py  20260710_130000_add_scope_registry.py  20260710_133000_add_actor_canonical_roles.py  20260710_140000_add_source_documents.py  20260711_100000_add_chunks_processed.py  20260712_020000_expand_actor_role.py  20260712_030000_source_document_claims.py  c732fb5ac39c_create_base_tables.py
data/raw/: design-doc.txt
docs/: ARCHITECTURE.md  narrative-engine-design-v0.7.md
docs/tickets/: README.md  T1-eval-fixtures-and-ci-gates.md  T2-structural-render-hardening.md  T3-model-orm-roundtrip-tests.md  T4-embedding-render-versioning.md  T5-scope-registry.md  T6-analog-dedup.md  T7-drop-directory-watcher.md  T8-dashboard-and-review-ui.md  T9-anthropic-llm-client.md
scripts/: manual_e2e.py  run_fixture_test.py  seed_demo.py  tune_thresholds.py
src/narrative_engine/: __init__.py  models.py  scopes.py  watcher.py
src/narrative_engine/api/: __init__.py  app.py
src/narrative_engine/api/static/: dashboard.html
src/narrative_engine/composition/: __init__.py  arc_instance.py  identity.py  pipeline.py
src/narrative_engine/data/: scope_registry.json
src/narrative_engine/evaluation/: __init__.py  backtest.py  harness.py  metrics.py
src/narrative_engine/extraction/: __init__.py  client.py  config.py  pipeline.py  prompts.py  roles.py
src/narrative_engine/generation/: __init__.py
src/narrative_engine/ingestion/: __init__.py  chunker.py  cli.py  models.py  parsers.py  pipeline.py
src/narrative_engine/observability/: logging.py
src/narrative_engine/retrieval/: __init__.py  analog_retrieval.py  embeddings.py  epochs.py  reembed.py
src/narrative_engine/storage/: __init__.py  config.py  database.py  orm_models.py  repositories.py
src/narrative_engine/taxonomy/: __init__.py  models.py  orm_models.py  repository.py  residue.py  service.py
src/narrative_engine/thesis/: __init__.py  generator.py  prompts.py
tests/: conftest.py
tests/fixtures/: analog_fixture.py  composition_fixture.py  test_analog_fixture.py
tests/integration/: test_api.py  test_database.py  test_full_pipeline.py  test_harness.py
tests/unit/: test_analog_dedup.py  test_analog_retrieval.py  test_anthropic_client.py  test_design_fixes.py  test_embedding_epochs.py  test_evaluation.py  test_extraction.py  test_models.py  test_render_hardening.py  test_repositories.py  test_retrieval.py  test_roundtrip.py  test_scopes.py  test_thesis.py  test_watcher.py
tests/unit/test_composition/: test_arc_instance.py  test_fixture.py  test_identity.py  test_pipeline.py
tests/unit/test_ingestion/: test_chunker.py  test_parsers.py  test_pipeline.py
