[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrative-engine"
version = "0.1.0"
description = "A system for qualitative historical forecasting through narrative arc extraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenClaw", email = "openclaw@example.com" },
]
keywords = [
    "narrative",
    "forecasting",
    "llm",
    "history",
    "archetypes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.5.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
all = [
    "narrative-engine[dev,llm,web]",
]

[project.scripts]
narrative-engine = "narrative_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative_engine"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "UP006",  # Use list instead of List (deferred)
    "UP035",  # Use dict instead of Dict (deferred)
    "UP007",  # Use X | Y instead of Union (deferred)
]

[tool.ruff.lint.per-file-ignores]
"src/narrative_engine/**/*prompts.py" = ["E501"]  # Allow long lines in prompts

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.4.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=narrative_engine",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=55",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, requires external services)",
    "slow: Slow tests that should be run separately",
]

[tool.coverage.run]
source = ["src/narrative_engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
